@@ -31,6 +31,7 @@ importFrom(haven,read_sas)
 importFrom(knitr,knit)
 importFrom(knitr,knit_expand)
 importFrom(plyr,colwise)
+importFrom(plyr,daply)
 importFrom(plyr,ddply)
 importFrom(plyr,dlply)
 importFrom(reshape2,melt)
