@@ -9,6 +9,7 @@
     o loadDataADAM: include support for date/time format
     o createSubjectProfileReport/subjectProfileCombine: add refLines parameter
     o new addReferenceLinesProfilePlot function
+    o add bookmark functionality
 0.0.2
     o remove glpgUtility from the dependencies
 0.0.1
